--- a/react/lesson6/src/components/login/LoginPage.module.css
+++ b/react/lesson6/src/components/login/LoginPage.module.css
@@ -4,4 +4,10 @@
     align-items: center;
     justify-content: center;
     height: 100dvh;
+    max-width: 600px;
+    margin-inline: auto;
+}
+
+.loginTitle {
+    margin-bottom: 40px;
 }
