--- a/react/lesson6/src/components/shop/ShopPage.module.css
+++ b/react/lesson6/src/components/shop/ShopPage.module.css
@@ -25,3 +25,9 @@
     margin-inline: auto;
     padding: 50px 0;
 }
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
